<resources>
    <string name="app_name">App_A</string>
    <string name="left_fragment">This is a left fragment</string>
    <string name="right_fragment">This is a right fragment</string>
    <string name="right_fragment2">This is a right2 fragment</string>
    <string name="notification_alarm_title">This is the %1$dth alarm notification</string>
    <string name="notification_alarm_text">try to click</string>
    <string name="notification_normal_title">充电完成</string>
    <string name="notification_normal_text">充电已完成，请及时移除电源</string>
    <string name="contact_det">联系人详情</string>
    <string name="contact_name">名字</string>
    <string name="contact_sur_name">姓</string>
    <string name="contact_email">邮件</string>
    <string name="contact_address">地址</string>
    <string name="protected_time">持续保护%1$d天</string>
    <string name="text_change_test">我爱你%1$d天</string>
    <string name="snackbar">展示snackbar</string>
    <string name="do_anything">do anything</string>
    <string name="hello">hello boy</string>
    <string name="long_latin">long_latinfefejgejgejgegejgjegejgejg
    long_latinfefejgejgejgegejgjegejgejg
    long_latinfefejgejgejgegejgjegejgejg
    long_latinfefejgejgejgegejgjegejgejg
    long_latinfefejgejgejgegejgjegejgejg
    vv
    vvvlong_latinfefejgejgejgegejgjegejgejglong_latinfefejgejgejgegejgjegejgejglong_latinfefejgejgejgegejgjegejgejglong_latinfefejgejgejgegejgjegejgejglong_latinfefejgejgejgegejgjegejgejglong_latinfefejgejgejgegejgjegejgejglong_latinfefejgejgejgegejgjegejgejglong_latinfefejgejgejgegejgjegejgejglong_latinfefejgejgejgegejgjegejgejglong_latinfefejgejgejgegejgjegejgejglong_latinfefejgejgejgegejgjegejgejglong_latinfefejgejgejgegejgjegejgejglong_latinfefejgejgejgegejgjegejgejglong_latinfefejgejgejgegejgjegejgejglong_latinfefejgejgejgegejgjegejgejglong_latinfefejgejgejgegejgjegejgejglong_latinfefejgejgejgegejgjegejgejglong_latinfefejgejgejgegejgjegejgejglong_latinfefejgejgejgegejgjegejgejglong_latinfefejgejgejgegejgjegejgejglong_latinfefejgejgejgegejgjegejgejg</string>
    <string name="hello_girls">hello girls</string>
    <string name="hello_anims">hello anims</string>
    <string name="collapsing_toolbar">CollapsingToolbar</string>
    <string name="start_property_anim">启动动画</string>
    <string name="stop_property_anim">结束动画</string>
    <string name="display_view_anim">展示动画</string>
    <string name="take_picture">拍照</string>
    <string name="turn_off_flash_light">关闭闪光灯</string>
    <string name="turn_on_flash_light">打开闪光灯</string>
    <string name="test_color_text">%1$d个宝宝已出生，&lt;font color = \"#fb6f70\"&gt;快来抱抱&lt;/font&gt;</string>
    <string name="launch_singletop_a_activity">launch singleTopA</string>
    <string name="launch_singletask_a_activity">测试 singleTask -> 启动 A</string>
    <string name="launch_singleInstance_a_activity">测试 singleInstance -> 启动 A</string>
    <string name="send_msg_1">发送消息1</string>
    <string name="send_msg_2">发送消息2</string>
    <string name="get_volume_paths">获取可用的挂载点</string>

    <string name="listener_disabled">监听关闭</string>
    <string name="listener_enabled">监听启用</string>

    <string name="save">保存数据</string>
    <string name="pull">拉取</string>

    <string name="save_prompt">已保存到缓存目录%s</string>

    <string name="enter_listener_setting">进入监听设置</string>

    <string name="granted_fail_warning">授权失败，无法使用此APP</string>
    <string name="granted_success">已开启相关权限</string>


</resources>
