<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <Button
        android:id="@+id/start_property_anim"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_property_anim"/>

    <Button
        android:id="@+id/stop_property_anim"
        android:layout_below="@id/start_property_anim"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stop_property_anim"/>

    <Button
        android:id="@+id/display_anim"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="80dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/display_view_anim"/>

</RelativeLayout>